--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
 	<header>
-		<h1>Kyla Durbin</h1>
-		<div>
+		<div class="header">
+			<h1>Kyla Durbin</h1>
+		</div>	
+		<div class="content">
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
 			<a href="contact.html">Contact</a>
@@ -26,22 +28,26 @@
 		</p>
 	</section>
 
-	<section>
-		<h2>Connect with Me</h2>
+	<section class="Connect">
+		<div class="Connect With Me">
+			<h2>Connect with Me</h2>
+		</div>
+					
+		<div class="Logos">
+			<a href="https://github.com/KDurbin02" target="_blank">
+				<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
+			</a>
 
-		<a href="https://github.com/KDurbin02" target="_blank">
-		<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
-		</a>
-
-		<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
-		<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
-
-		<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
-		<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
-		</a>
+			<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
+				<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
+			</a>
+			<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
+				<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
+			</a>
+		</div>	
 	</section>
 
-	<section>
+	<section class="Footer">
 		<footer>@ Copyright2017 Kyla Durbin</footer>
 	</section>
 
