--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
 
 <body>
 	<header>
-		<h1>Kyla Durbin</h1>
-		<div>
+		<div class="header">
+			<h1>Kyla Durbin</h1>
+		</div>	
+		<div class="content">
 			<a href="index.html">About</a>
 			<a href="portfolio.html">Portfolio</a>
 			<a href="contact.html">Contact</a>
@@ -18,21 +20,42 @@
 	</header>
 
 	<section>
-		<h2>Connect with Me</h2>
-
-		<a href="https://github.com/KDurbin02" target="_blank">
-		<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
-		</a>
-
-		<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
-		<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
-
-		<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
-		<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
-		</a>
+		<div class="Contact">
+			<h1>Contact</h1>
+		</div>
+		<div class="Contact Form">	
+			<form>
+				Name:<br>
+				<textarea name="Name" rows="1" cols="80"></textarea><br>
+				Email:<br>
+				<textarea name="Email" rows="1" cols="80"></textarea><br>
+				Message:<br>
+				<textarea name="Message" rows="15" cols="80"></textarea><br>
+				<input type="submit" name="Submit">
+			</form>	
+		</div>		
 	</section>
 
-	<section>
+	<section class="Connect">
+		<div class="Connect With Me">
+			<h2>Connect with Me</h2>
+		</div>
+					
+		<div class="Logos">
+			<a href="https://github.com/KDurbin02" target="_blank">
+				<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
+			</a>
+
+			<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
+				<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
+			</a>
+			<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
+				<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
+			</a>
+		</div>	
+	</section>
+
+	<section class="Footer">
 		<footer>@ Copyright2017 Kyla Durbin</footer>
 	</section>
 
