--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Contact</title>
+	<style type="text/css"><link rel="stylesheet" type="text/css" href="assests/css/style.css"></style>
 	<link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 
-<body>
+<body id="ContactPage">
 	<header>
 		<div class="header">
 			<h1>Kyla Durbin</h1>
@@ -37,7 +38,7 @@
 	</section>
 
 	<section class="Connect">
-		<div class="Connect With Me">
+		<div class="ConnectWithMe">
 			<h2>Connect with Me</h2>
 		</div>
 					
