--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 
-<body>
+<body id="PortfolioPage">
 	<header>
 		<div class="header">
 			<h1>Kyla Durbin</h1>
@@ -18,6 +18,13 @@
 			<a href="contact.html">Contact</a>
 		</div>
 	</header>
+
+	<section class="Portfolio">
+		<div class="Portfolio header">
+			<h1>Portfolio</h1>
+		</div>
+		<div></div>
+	</section>
 
 	<section class="Connect">
 		<div class="Connect With Me">
