--- a/index.html
+++ b/index.html
@@ -5,47 +5,53 @@
 <head>
 	<meta charset="utf-8">
 	<title>Index</title>
-	<link rel="stylesheet" type="text/css" href="assests/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body>
 	<header>
-		<div class="header">
-			<h1>Kyla Durbin</h1>
-		</div>	
-		<div class="content">
-			<a href="index.html">About</a>
-			<a href="portfolio.html">Portfolio</a>
-			<a href="contact.html">Contact</a>
-		</div>
+		<h1 id="name">Kyla Durbin</h1>
+		<div class="navigation">
+			<nav>
+				<ul>
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>	
+			</nav>
 	</header>
 
-	<section>
-		<h1>About Me</h1>
-		<img src="assets/images/Profpic.jpg" alt="Kyla Profile Picture" width="200px">
-		<p>
-			This is where I talk about myself. I will edit in more late cause nothing is coming to mind. Bla blah blah blah blah blah blah blah. I can atleat work on my typing skills here because they are seriously lacking.
-		</p>
-	</section>
+	<section class="page_body">
+		<section class="page_content">
+			<div id="about_me">
+				<h1>About Me</h1>
+				<hr>
+				<img id="prof_pic" src="assets/images/Profpic.jpg" alt="Kyla Profile Picture" width="200px">
+				<p>
+					Cats go for world domination loved it, hated it, loved it, hated it and soft kitty warm kitty little ball of furr slap owner's face at 5am until human fills food dish yet chew on cable. Groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked find a way to fit in tiny box but head nudges . I could pee on this if i had the energy stick butt in face, but scratch the box so poop in litter box, scratch the walls leave fur on owners clothes. Love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the glittery gleaming yarn to him (the yarn is from a $125 sweater) meowing chowing and wowing but inspect anything brought into the house, but where is my slave? I'm getting hungry. Purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table my left donut is missing, as is my right fall over dead (not really but gets sypathy) fall over dead (not really but gets sypathy). Munch on tasty moths. 
+				</p>
+			</div>	
+		</section>
 
-	<section class="Connect">
-		<div class="Connect With Me">
-			<h2>Connect with Me</h2>
+		<div id="connect">
+				<h2>Connect with Me</h2>
+				<hr>
+			<div class="Logos">
+				<a href="https://github.com/KDurbin02" target="_blank">
+					<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
+				</a>
+
+				<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
+					<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
+				</a>
+				<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
+					<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
+				</a>
+			</div>	
 		</div>
-					
-		<div class="Logos">
-			<a href="https://github.com/KDurbin02" target="_blank">
-				<img src="assets/images/github.png" alt="Github link" width="50px" border="0">
-			</a>
-
-			<a href="https://www.linkedin.com/in/kyla-durbin-26934b148?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BuRh0NwCMTHSo0X4%2Bh6NoaQ%3D%3D" target="_blank">
-				<img src="assets/images/linkedin.png" alt="Linkedin link" width="50px" border="0">
-			</a>
-			<a href="https://stackoverflow.com/users/8469147/kyla-durbin?tab=profile" target="_blank">
-				<img src="assets/images/stackoverflow.png" alt="Stackoverflow Link" width="50px" border="0">
-			</a>
-		</div>	
-	</section>
+	</section>	
 
 	<section class="Footer">
 		<footer>@ Copyright2017 Kyla Durbin</footer>
