updated profile page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h1>About Me</h1>
 				<hr>
 				<img id="prof_pic" src="assets/images/Profpic.jpg" alt="Kyla Profile Picture" width="200px">
-				<p>
+				<p id="prof_text">
 					Cats go for world domination loved it, hated it, loved it, hated it and soft kitty warm kitty little ball of furr slap owner's face at 5am until human fills food dish yet chew on cable. Groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked find a way to fit in tiny box but head nudges . I could pee on this if i had the energy stick butt in face, but scratch the box so poop in litter box, scratch the walls leave fur on owners clothes. Love and coo around boyfriend who purrs and makes the perfect moonlight eyes so i can purr and swat the glittery gleaming yarn to him (the yarn is from a $125 sweater) meowing chowing and wowing but inspect anything brought into the house, but where is my slave? I'm getting hungry. Purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table my left donut is missing, as is my right fall over dead (not really but gets sypathy) fall over dead (not really but gets sypathy). Munch on tasty moths. 
 				</p>
 			</div>	
