edited portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,40 @@
 				<hr>
 				<table>
 					<tr>
-						<td><img src="assets/images/soccerball.jpg" alt="soccerball" height="195px" width="262px"></td>
-						<td><img src="assets/images/runnershigh.jpg" alt="running" height="195px" width="262px"></td>
+						<td>
+							<div class="table">
+								<img class="table_image" src="assets/images/soccerball.jpg" alt="soccerball" height="195px" width="262px">
+								<h2 class="table_text">Soccer</h2>
+							</div>
+						</td>
+						<td>
+							<div class="table">
+								<h2 class="table_text"><span>Running</span></h2>
+								<img class="table_image" src="assets/images/runnershigh.jpg" alt="running" height="195px" width="262px">
+							</div>
+						</td>
 					</tr>
 					<tr>
-						<td><img src="assets/images/yoga.jpg" alt="yoga" height="195px" width="262px"></td>
-						<td><img src="assets/images/cat.jpg" alt="cat" height="195px" width="262px"></td>
+						<td>
+							<div class="table">
+								<h2 class="table_text"><span>Yoga</span></h2>
+								<img class="table_image" src="assets/images/yoga.jpg" alt="yoga" height="195px" width="262px">
+							</div>
+						</td>
+						<td>
+							<div class="table">
+								<h2 class="table_text"><span>Cats</span></h2>
+								<img class="table_image" src="assets/images/cat.jpg" alt="cat" height="195px" width="262px">
+							</div>	
+						</td>
 					</tr>
 					<tr>
-						<td><img src="assets/images/books.jpg" alt="reading" height="195px" width="262px"></td>
+						<td>
+							<div class="table">
+								<h2 class="table_text"><span>Reading</span></h2>
+								<img class="table_image" src="assets/images/books.jpg" alt="reading" height="195px" width="262px">
+							</div>
+						</td>
 					</tr>	
 				</table>
 			</div>		
