--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<hr>
 				<img id="prof_pic" src="assets/images/Profpic.jpg" alt="Kyla Profile Picture" width="200px">
 				<p id="prof_text">
-					After living in sunny Gainesville, Fl for 25 years I moved to Charlotte, NC in the dead of the winter almost 2 years ago. I am brand new to the web development world with the UNCC Coding Bootcamp being my very intense introduction. So far I am loving every bit of it and can't wait to learn more! Currently I am employed at Publix Supermarkets where I have been a cashier, event planner, and produce clerk. In my free time I love being active. I am an avid runner and just completed my first half marathon and am ready to train for my next! I also play soccer for CWSL, a womens recreational league here in Charlotte. I enjoy yoga to help me unwind. And to really relax I love reading and of course a good Netflix binge.
+					After living in sunny Gainesville, FL for 25 years I moved to Charlotte, NC in the dead of the winter almost 2 years ago. I am brand new to the web development world with the UNCC Coding Bootcamp being my very intense introduction. So far I am loving every bit of it and can't wait to learn more! Currently I am employed at Publix Supermarkets where I have been a cashier, event planner, and produce clerk. In my free time I love being active. I am an avid runner and just completed my first half marathon and am ready to train for my next! I also play soccer for CWSL, a women's recreational league here in Charlotte. I enjoy yoga to help me unwind. And to really relax I love reading and of course a good Netflix binge.
 				</p>
 			</div>	
 		</section>
