added crystal game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,19 @@
 					<tr>
 						<td>
 							<div class="table">
-								<img class="table_image" src="assets/images/soccerball.jpg" alt="soccerball" height="195px" width="262px">
-								<h2 class="table_text">Soccer</h2>
+								<h2 class="table_text">Hangman</h2>
+								<a href="https://kdurbin02.github.io/Hangman-Game/" target="_blank">
+									<img class="table_image" src="assets/images/hangman.jpg" alt="Hangman" height="195px" width="262px">
+								</a>
 							</div>
 						</td>
 						<td>
 							<div class="table">
-								<h2 class="table_text"><span>Running</span></h2>
-								<img class="table_image" src="assets/images/runnershigh.jpg" alt="running" height="195px" width="262px">
+								<h2 class="table_text"><span>Crystal Game</span></h2>
+								<a href="https://kdurbin02.github.io/week-4-game/" target="_blank">
+									<img class="table_image" src="assets/images/crystals.png" alt="Crystal Game" height="195px" width="262px">
+								</a>	
+								
 							</div>
 						</td>
 					</tr>
